--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
+    "node-schedule": "1.3.0",
     "nodemon": "^1.19.4"
   }
 }
