--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "axios": "^0.27.2",
+    "filesystem": "^1.0.1",
     "lodash": "^4.17.21",
     "node-schedule": "1.3.0",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "path": "^0.12.7"
   }
 }
